Ingress-IngressController/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask-app
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
      - path: /greet
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
